# Manifold

./: .gitignore  .gitmodules  BuildWebGL.bat  CMakeLists.txt  GenerateProjectFiles.bat  ImportAssets.bat  InitProject.bat  LICENSE  Old.gitmodules  README.md  initProject.lua  locations.lua  premake5.lua  utils.lua
AssetImporter/: main.cpp  premake5.lua
AssetImporter/MeshImporter/: MeshImporter.cpp  MeshImporter.h
AssetImporter/SceneImporter/: SceneImporter.cpp
AssetImporter/ShaderImporter/: ShaderImporter.cpp  ShaderImporter.h
Assets/Shaders/: baseLit.shader  flatColor.shader  sprite.glsl  sprite.shader
BuildScripts/: BuildWebGL.bat  buildwebgl.lua
Config/: AssetImporter.json
Core/: Application.cpp  Application.h  Core.cpp  Core.h  System.cpp  System.h  World.cpp  World.h
ECS/: CMakeLists.txt  ECS.cpp  ECS.h  Entity.h  EntityRegistry.cpp  EntityRegistry.h  RegistryView.h
ECS/Tests/: CMakeLists.txt
ECSEngine/: CMakeLists.txt  ECSEngine.cpp
Engine/: premake5.lua
Engine/AssetImporter/: main.cpp  premake5.lua
Engine/BuildScripts/: BuildWebGL.bat  buildwebgl.lua
Engine/Modules/: premake5.lua
Engine/Scripts/: CreateEngineModule.bat  create_module.py  locations.py
Engine/Tests/: WorldSystem.cpp  main.cpp  premake5.lua
Modules/: premake5.lua
Modules/Assets/: premake5.lua
Modules/Collision/: premake5.lua
Modules/Core/: Application.cpp  Application.h  Assert.h  Core.h  CoreTime.cpp  CoreTime.h  Event.h  FileSystem.h  Log.h  World.cpp  World.h  premake5.lua
Modules/ECS/: Entity.cpp  Entity.h  EntityRegistry.h  RegistryView.h  premake5.lua
Modules/Events/: Event.h  premake5.lua
Modules/Inputs/: premake5.lua
Modules/OpenGL/: OpenGL.cpp  OpenGL.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLLayer.cpp  OpenGLLayer.h  OpenGLSystem.cpp  OpenGLSystem.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  premake5.lua
Modules/RenderAPI/: premake5.lua
Modules/Scene/: premake5.lua
OSUtils/: CMakeLists.txt  OSUtils.cpp  OSUtils.h
ProjectTemplate/: BuildWebGL.bat  GenerateProjectFiles.bat  ImportAssets.bat  locations.lua  premake5.lua
ProjectTemplate/Config/: AssetImporter.json
Sandbox/: DebugCameraControllerSystem.cpp  DebugCameraControllerSystem.h  SandboxSystem.cpp  SandboxSystem.h  ShaderUtils.cpp  main.cpp
Sandbox/Scripts/: create_module.py  locations.py
Scripts/: CreateEngineModule.bat  locations.py
Scripts/LuaScripts/: filesystem.lua  mani.lua  windowsFilesystem.lua
Scripts/Templates/: ModuleHeader.h.template  (+1 more)
Tests/: ECSTests.cpp  EventTests.cpp  main.cpp  premake5.lua
vstools/: tools.vssettings
(+390 files in other folders)
